- adiciona roles para os usuarios
- adiciona validação de roles para os usuarios
