# api/docs/swagger.yaml
@@ -92,6 +92,7 @@ info:
   contact: {}
   description: A Simple Register Web Service
   title: Web Register
+  version: "1.0"
 paths:
   /auth/check:
     get:
@@ -132,40 +133,6 @@ paths:
             type: string
       tags:
       - Authentication
-  /getallusers:
-    get:
-      description: Get all user inserted in Database
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/db.GetAllUsersRow'
-            type: array
-      tags:
-      - Users
-  /getuserbyid/{id}:
-    get:
-      description: Get a user by your ID in Database
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successful response
-          schema:
-            $ref: '#/definitions/db.SelectUserRow'
-      security:
-      - Bearer: []
-      tags:
-      - Users
   /login:
     post:
       consumes:
@@ -220,7 +187,26 @@ paths:
             type: string
       tags:
       - Auth
-  /updateuser/{id}:
+  /user/{id}:
+    get:
+      description: Get a user by your ID in Database
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successful response
+          schema:
+            $ref: '#/definitions/db.SelectUserRow'
+      security:
+      - Bearer: []
+      tags:
+      - Users
     put:
       consumes:
       - application/json
@@ -242,4 +228,18 @@ paths:
       - Bearer: []
       tags:
       - Users
+  /users:
+    get:
+      description: Get all user inserted in Database
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/db.GetAllUsersRow'
+            type: array
+      tags:
+      - Admin
 swagger: "2.0"
