# api/main.go
@@ -7,6 +7,7 @@ import (
 	_ "register/docs"
 	"register/internal/database"
 	"register/internal/handler"
+	"register/internal/middlewares"
 	"register/internal/models"
 
 	"github.com/golang-jwt/jwt/v5"
@@ -16,11 +17,17 @@ import (
 	echoSwagger "github.com/swaggo/echo-swagger"
 )
 
-// @title Web Register
-// @description A Simple Register Web Service
-// @host localhost:8002
-// @basePath /
+// @title			Web Register
+// @version 1.0
+// @description		A Simple Register Web Service
+// @host			localhost:8002
+// @BasePath		/
 func main() {
+	pool, err := database.Connect()
+	if err != nil {
+		log.Fatalf("Failed to connect on database: %v", err)
+	}
+
 	e := echo.New()
 
 	e.Use(middleware.CORSWithConfig(middleware.CORSConfig{
@@ -30,11 +37,6 @@ func main() {
 	}))
 	e.Use(middleware.Recover())
 
-	pool, err := database.Connect()
-	if err != nil {
-		log.Fatalf("Failed to connect on database: %v", err)
-	}
-
 	e.POST("/signup", func(c echo.Context) error {
 		return handler.RegisterUserHandler(c, pool)
 	})
@@ -43,31 +45,36 @@ func main() {
 		return handler.LoginHandler(c, pool)
 	})
 
-	config := echojwt.Config{
-		NewClaimsFunc: func(c echo.Context) jwt.Claims {
-			return new(models.JwtCustomClaims)
-		},
-		SigningKey:  []byte(os.Getenv("SECRET_KEY")),
-		TokenLookup: "cookie:token",
+	protected := e.Group("")
+	{
+		config := echojwt.Config{
+			NewClaimsFunc: func(c echo.Context) jwt.Claims {
+				return new(models.JwtCustomClaims)
+			},
+			SigningKey:  []byte(os.Getenv("SECRET_KEY")),
+			TokenLookup: "cookie:token",
+		}
+		protected.Use(echojwt.WithConfig(config))
 	}
 
-	protected := e.Group("")
-	protected.Use(echojwt.WithConfig(config))
-
 	protected.GET("/auth/check", handler.CheckAuthToken)
+
+	protected.POST("/auth/logout", handler.LogoutHandler)
 
 	protected.GET("/user/:id", func(c echo.Context) error {
 		return handler.GetUserByIdHandler(c, pool)
 	})
 
-	protected.GET("/getusers", func(c echo.Context) error {
-		return handler.GetAllUsersHandler(c, pool)
-	})
-
-	protected.POST("/auth/logout", handler.LogoutHandler)
-
 	protected.PUT("/user/:id", func(c echo.Context) error {
 		return handler.UpdateUserHandler(c, pool)
+	})
+
+	admin := protected.Group("/admin")
+
+	admin.Use(middlewares.ValidateAdminAccess)
+
+	admin.GET("/users", func(c echo.Context) error {
+		return handler.GetAllUsersHandler(c, pool)
 	})
 
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
